# Pallas-Bot-AI

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.slim  README.md  docker-compose.4.0-ci.yml  docker-compose.llm.gpu.yml  docker-compose.llm.yml  docker-compose.yml  pyproject.toml  test_svc_inference_lock.py  test_windows_compat.py
.github/workflows/: ci.yml  docker-build.yml  release.yml
Docker/: downloader.sh  models.txt  startup.sh  startup.slim.sh
app/: __init__.py  app_factory.py  image_reference.py  image_runtime.py  main.py  media_assets.py  media_models.py  media_task_runtime.py  media_task_store.py  run_api.py  runtime_health.py  windows_compat.py
app/api/: api_errors.py  routers.py
app/api/endpoints/: chat.py  embeddings.py  images.py  llm_chat.py  llm_manage.py  llm_providers.py  llm_stats.py  media_assets.py  media_models.py  media_tasks.py  ncm_login.py  ollama.py  ops_logs.py  persona_affect.py  sing.py  tts.py
app/core/: celery.py  config.py  llm_backend_runtime.py  logger.py  ollama_gpu_guard.py  ollama_runtime.py  redis.py  startup_report.py
app/core/celery/: celery_app.py
app/providers/: __init__.py  categorizer.py  chain.py  config_store.py  local_backend.py  local_routing_config.py  moe.py  operator_lookup.py  registry.py  remote_backend.py  router.py  runtime_trace.py  token_usage.py  tool_loop.py  tool_schema.py  tools.py  types.py
app/schemas/: chat.py  image_api.py  knowledge.py  llm_api.py  llm_chat.py  llm_replay.py  media_task_api.py  ncm_login.py  ollama.py  persona_affect.py  providers_api.py  sing.py  tts.py
app/services/: bot_tools.py  callback.py  chat.py  knowledge_metadata.py  llm_chat.py  llm_chat_request.py  llm_messages.py  llm_queue.py  llm_replay.py  llm_rewrite.py  llm_task_metrics.py  llm_token_metrics.py  media_task_callback.py  ollama.py  persona_affect.py  service_logs.py  session_summary.py  sing.py  translator.py  tts.py  vision_messages.py
app/session/: __init__.py  memory.py  redis_store.py
app/tasks/: __init__.py  media_device.py
app/tasks/chat/: __init__.py  chat_tasks.py  model.py  pipeline.py  prompt.py  rwkv_tokenizer.py
app/utils/: download_tool.py  gpu_locker.py  retry.py
config/: providers.example.toml
deploy/: docker-compose.bot-join-ai.example.yml  ollama-gpu-watchdog.cron.example
docs/: Deployment.md  README.md  dev-log.md
docs/architecture/: 4.0-local-models.md  README.md  local-models.md  persona-affect-refine.md  platform-roadmap.md  runtime.md
docs/deploy/: remote-only.md
docs/operate/: ollama-gpu-watchdog.md
resource/sing/: .gitignore  registry.yaml
scripts/: ai_bootstrap.sh  ai_service.sh  celery_worker.sh  ctl.sh  download_media_assets.sh  install_ollama_gpu_watchdog_cron.sh  ollama_gpu_watchdog.sh  run_api.sh
tests/: __init__.py  conftest.py  test_ai_service_script.py  test_api_endpoint_resolve.py  test_api_images.py  test_api_llm_manage.py  test_api_llm_providers.py  test_api_llm_replay.py  test_api_llm_stats.py  test_api_media_tasks.py  test_api_ops_logs.py  test_celery_packages.py  test_celery_routing.py  test_chat_task_locking.py  test_embeddings_api.py  test_gpu_locker.py  test_health_routes.py  test_image_runtime_reference.py  test_legacy_chat_disabled.py  test_llm_backend_runtime.py  test_llm_chat.py  test_llm_messages.py  test_llm_rewrite.py  test_llm_task_metrics.py  test_llm_token_metrics.py  test_local_routing_config.py  test_logger.py  test_media_assets.py  test_media_device.py  test_media_models.py  test_media_task_callback.py  test_media_task_callback_service.py  test_media_task_runtime_sing.py  test_media_task_store.py  test_moe_inference_tier.py  test_moe_tier_routing.py  test_ollama_gpu_guard.py  test_persona_affect.py  test_provider_readiness.py  test_provider_registry.py  (+9 more)
tests/providers/: test_categorizer.py  test_local_backend.py  test_operator_lookup.py  test_tool_loop.py  test_tool_schema.py  test_tools_catalog.py
tests/services/: test_knowledge_metadata.py
tools/: patch_pyncm_async_py310.py
(+18 files in other folders)
