[project]
name = "pallas-bot-ai"
version = "0.1.0"
description = "Pallas-Bot AI Backend"
authors = [{ name = "mxcoras", email = "mxcoras@outlook.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.sing.dependencies]
gradio = "^4.44.1"
scipy = "^1.13.1"
pyncm = "^1.7.1"
pydub = "^0.25.1"
demucs = "^4.0.1"
asyncer = "^0.0.8"
einops = "^0.8.1"
fairseq = "^0.12.2"
librosa = "^0.10.2.post1"
local-attention = "^1.11.1"
numpy = "1.26.4"
praat-parselmouth = "^0.4.5"
pyworld = "^0.3.5"
pyyaml = "^6.0.2"
resampy = "^0.4.3"
scikit-learn = "^1.6.1"
soundfile = "^0.13.1"
tensorboard = "^2.19.0"
torchcrepe = "^0.0.23"
torchfcpe = "^0.0.4"
tqdm = "^4.67.1"
transformers = "^4.49.0"
wave = "^0.0.2"
freesimplegui = "^5.1.1"
sounddevice = "^0.5.1"
flask = "^3.1.0"
flask-cors = "^5.0.1"
gin = "^0.1.6"
gin-config = "^0.5.0"
torch = [
    { version = "^2.6.0", markers = "extra != 'cuda'", source = "pytorch-cpu" },
    { version = "^2.6.0", markers = "extra == 'cuda'", source = "pytorch-cuda" },
]
apscheduler = "^3.11.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
